tests/neg/errmsg-dc.hs
module Boo where

{-@ data T = C { x :: Int } @-}

data T = C { x :: Int, y :: Int }

